--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,14 @@
 @import url(http://fonts.googleapis.com/css?subset=latin,cyrillic-ext,latin-ext,cyrillic&family=Open+Sans+Condensed:300|Merriweather:400,300,300italic,400italic,700,700italic|Roboto+Slab:400,300);
-@import url(http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css);
 
-body {
+body, .footer {
 	color: #eee;
-	background: #302013;
+	background: #080009;
+}
+
+.container {
+	padding-top: 2em;
+	background: #190720;
 }
 
 h1 {
@@ -33,5 +38,77 @@ a:hover {
 }
 
 .content {
-	margin-top: 2.1em;
+	padding-top: 2.1em;
+}
+.content p {
+
+}
+
+.logo-wrapper {
+	text-align: center;
+}
+
+.making {
+	background-color: #130414;
+}
+
+/* video */
+.embed-container { 
+  position: relative; 
+  padding-bottom: 56.25%; 
+  height: 0; 
+  overflow: hidden; 
+  max-width: 100%; 
+  height: auto; 
+} 
+.embed-container iframe, 
+.embed-container object, 
+.embed-container embed { 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; height: 100%; 
+}
+.after-video {
+  padding-top: 1em;
+}
+
+.supporting {
+	background-color: #090309;
+	padding-bottom: 1.5em;
+}
+.supporting .first {
+	margin-top: 1.25em;
+}
+.supporting h2 {
+	margin-top: 2em;
+}
+.supporting h2.first {
+	margin-top: inherit;
+}
+
+.community-logos {
+	margin-top: 2.25em;
+/*	padding-bottom: 2em;*/
+}
+.logo {
+	margin-bottom: 1em;
+}
+.rain-wrapper {
+	margin-top: 1.75em;
+	margin-left: -2ex;
+}
+
+.mission {
+	font-size: 14pt;
+	line-height: 20pt;
+}
+
+.made-in-oregon {
+	margin-top: 0.5em;
+	font-size: small;
+	margin-bottom: 1em;
+}
+.footer {
+	padding-bottom: 2em;
 }
