--- a/style/main.css
+++ b/style/main.css
@@ -57,13 +57,21 @@ a:hover {
 
 }
 
+.at-bottom {
+	padding-bottom: 1.4em;
+}
+
 .logo-wrapper {
 	text-align: center;
 }
 
+.membership-drive {
+	background-color: #005F7F;
+}
+
 .making {
 	background-color: #130414;
-	background-color: #005F7F;
+	background-color: #00506B;
 }
 
 /* video */
@@ -150,6 +158,7 @@ h2.after-community-logos {
 .footer {
 	padding-bottom: 2em;
 }
+
 
 /* Smaller font sizes on mobile devices */
 @media (max-width: 667px) {
