--- a/style/main.css
+++ b/style/main.css
@@ -142,11 +142,11 @@ h2.after-community-logos {
 	line-height: 20pt;
 }
 
-.oregon {
-	margin-top: 1.75em;
+.washington {
+	margin-top: 2.25em;
 	margin-bottom: 1ex;
 }
-.oregon-wrapper {
+.washington-wrapper {
 	text-align: right;
 }
 
